Animations for the pages added.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </title>
     </head>
 
-    <body class="craigCode">
+    <body class="craig-code">
         <div class="header">
             <h1>
                 CraigCode1010
@@ -131,7 +131,7 @@
         </div>
 
         <div class="content">
-            <div id="page-h" class="page">
+            <div id="page-h" class="page page-in">
                 <h1>
                     Home
                 </h1>
@@ -146,7 +146,7 @@
                 </p>
             </div>
 
-            <div id="page-p" class="page">
+            <div id="page-p" class="page page-in">
                 <h1>
                     Projects
                 </h1>
@@ -163,7 +163,7 @@
                 </p>
             </div>
 
-            <div id="page-p-s" class="page">
+            <div id="page-p-s" class="page page-in">
                 <h1>
                     Southern Arm Control
                 </h1>
@@ -186,7 +186,7 @@
                 </p>
             </div>
 
-            <div id="page-p-s-i" class="page">
+            <div id="page-p-s-i" class="page page-in">
                 <h1>
                     Inverse Kinematics Model
                 </h1>
@@ -366,7 +366,7 @@
                 </p>
             </div>
 
-            <div id="page-p-s-s" class="page">
+            <div id="page-p-s-s" class="page page-in">
                 <h1>
                     Structure
                 </h1>
@@ -499,7 +499,7 @@
                 </p>
             </div>
 
-            <div id="page-p-s-in" class="page">
+            <div id="page-p-s-in" class="page page-in">
                 <h1>
                     Installation
                 </h1>
@@ -603,7 +603,7 @@
                 pages of each package.
             </div>
 
-            <div id="page-p-s-b" class="page">
+            <div id="page-p-s-b" class="page page-in">
                 <h1>
                     Building
                 </h1>
@@ -624,7 +624,7 @@
                 </p>
             </div>
 
-            <div id="page-p-s-r" class="page">
+            <div id="page-p-s-r" class="page page-in">
                 <h1>
                     Running
                 </h1>
@@ -669,7 +669,7 @@
                 </p>
             </div>
 
-            <div id="page-p-s-d" class="page">
+            <div id="page-p-s-d" class="page page-in">
                 <h1>
                     Design Guidlines
                 </h1>
@@ -736,7 +736,7 @@
                 </p>
             </div>
 
-            <div id="page-p-s-c" class="page">
+            <div id="page-p-s-c" class="page page-in">
                 <h1>
                     Contributing
                 </h1>
@@ -750,7 +750,7 @@
                 </p>
             </div>
 
-            <div id="page-p-s-do" class="page">
+            <div id="page-p-s-do" class="page page-in">
                 <h1>
                     Downloads
                 </h1>
@@ -1030,7 +1030,7 @@
                 </table>
             </div>
 
-            <div id="page-p-c" class="page">
+            <div id="page-p-c" class="page page-in">
                 <h1>
                     CraigCode1010
                 </h1>
@@ -1054,7 +1054,7 @@
                 </p>
             </div>
 
-            <div id="page-a" class="page">
+            <div id="page-a" class="page page-in">
                 <h1>
                     About
                 </h1>
