Changes to the CraigCode1010 project section

--- a/index.html
+++ b/index.html
@@ -1047,10 +1047,10 @@
                     <br />
                     <br />
 
-                    &nbsp;&nbsp;&nbsp;&nbsp;Though this site should be awsome enough to amaze. It 
+                    <!--&nbsp;&nbsp;&nbsp;&nbsp;Though this site should be awsome enough to amaze. It 
                     is not the end. This site is also a facade for a Raspberry Pi cluster which 
                     uses ROS for communication in the cluster. When this is completed to a 
-                    reasonable state the packages for will be posted to my GitHub page.
+                    reasonable state the packages for will be posted to my GitHub page.-->
                 </p>
             </div>
 
