Change to the email address

--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,7 @@
 
                     <br />
 
-                    Email: <a href="craigc@craigcode1010.com">craigc@craigcode1010.com</a>
+                    Email: <a href="craigcode1010@gmail.com">craigcode1010@gmail.com</a>
                 </p>
             </div>
         </div>
