--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' />
         <link href="craigCode.css" rel="stylesheet" />
+        <link rel="icon" type="image/png" href="icon.png" />
         <meta charset="utf-8" />
         <title>
             CraigCode1010
