Addition of the gazebo crashing issue.

--- a/index.html
+++ b/index.html
@@ -792,6 +792,14 @@
                     it will pick up the object below the target object. The unreliable grip issue
                     may possibly be solved by using the MoveIt! package, though this will not solve 
                     the sinking/dropping issue.
+
+                    <h3>
+                        Simulator Crashing
+                    </h3>
+
+                    &nbsp;&nbsp;&nbsp;&nbsp;The Gazebo simulator currently crashes about 90% - 95% of
+                    time when running on a VM. I think this is an issue with Gazebo, not anything with
+                    my project and this may be resolved with new versions of Gazebo.
                 </p>
             </div>
 
