addition of animations to the menu

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
 
-                <div id="menu-p" class="menu-group">
+                <div id="menu-p" class="menu-group page-in">
                     <div class="topic sub-topic">
                         <div class="text" onclick="showPage('page-p-s'); showMenu('menu-p-s', 1)">
                             <h3>
@@ -46,7 +46,7 @@
                         </div>
                     </div>
 
-                    <div id="menu-p-s" class="menu-group">
+                    <div id="menu-p-s" class="menu-group page-in">
                         <div class="topic sub-sub-topic">
                             <div class="text" onclick="showPage('page-p-s-s')">
                                 <h4>
@@ -72,7 +72,7 @@
                             </div>
                         </div>
 
-                        <div id="menu-p-s-in" class="menu-group">
+                        <div id="menu-p-s-in" class="menu-group page-in">
                             <div class="topic sub-sub-sub-topic">
                                 <div class="text" onclick="showPage('page-p-s-in-l')">
                                     <h5>
