The menu now folds correctly

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                         </div>
 
                         <div class="topic sub-sub-topic">
-                            <div class="text" onclick="showPage('page-p-s-i')">
+                            <div class="text" 
+                                onclick="showPage('page-p-s-i'); showMenu(null, 2)">
                                 <h4>
                                     Inverse Kinematics
                                 </h4>
@@ -74,7 +75,8 @@
 
                         <div id="menu-p-s-in" class="menu-group page-in">
                             <div class="topic sub-sub-sub-topic">
-                                <div class="text" onclick="showPage('page-p-s-in-l')">
+                                <div class="text" 
+                                    onclick="showPage('page-p-s-in-l'); showMenu(null, 2)">
                                     <h5>
                                         Latest
                                     </h5>
@@ -82,7 +84,8 @@
                             </div>
 
                             <div class="topic sub-sub-sub-topic">
-                                <div class="text" onclick="showPage('page-p-s-in-lu')">
+                                <div class="text" 
+                                    onclick="showPage('page-p-s-in-lu'); showMenu(null, 2)">
                                     <h5>
                                         Lunar
                                     </h5>
@@ -90,7 +93,8 @@
                             </div>
 
                             <div class="topic sub-sub-sub-topic">
-                                <div class="text" onclick="showPage('page-p-s-in-k')">
+                                <div class="text" 
+                                    onclick="showPage('page-p-s-in-k'); showMenu(null, 2)">
                                     <h5>
                                         Kinetic
                                     </h5>
