Change of comments on the document download.

--- a/index.html
+++ b/index.html
@@ -1141,8 +1141,11 @@
                 </a>
 
                 <br />
-                Note: This paper has had minor modification to correct some errors since the approval 
-                by the defence committee listed in the paper.
+
+                Note: I will be posting a new version of this paper on this site once SAC Lunar is 
+                fully complete. Untill then the documentation will be on this site and on the 
+                project GitHubs. (yes, I know there are a few minor errors in the paper they will 
+                be fixed in the next version).
 
                 <br />
                 <br />
