Addition of the rand and salsa pages

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </div>
 
 
-                        <div id="menu-p-s-in" class="menu-group page-in">
+                        <div id="menus_projects_sac_install" class="menu-group page-in">
                             <div class="topic sub-sub-sub-topic">
     <div class="text" onclick="showPage('pages_projects_sac_install_latest'); showMenu(null, 3)">
         <h5>
@@ -169,6 +169,28 @@
     </div>
 </div>
 
+
+                <div id="menus_rand" class="menu-group page-in">
+                    <div class="topic ">
+    <div class="text" onclick="showPage('pages_rand'); showMenu('menus_rand_salsa', 0)">
+        <h2>
+            Rand()
+        </h2>
+    </div>
+</div>
+
+
+                    <div id="menus_rand_salsa" class="menu-group page-in">
+                        <div class="topic sub-topic">
+    <div class="text" onclick="showPage('pages_rand_salsa'); showMenu(null, 1)">
+        <h3>
+            Habanero-Serrano Salsa
+        </h3>
+    </div>
+</div>
+
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -1465,6 +1487,446 @@ be fixed in the next version).
     <br />
 
     Email: <a href="craigcode1010@gmail.com">craigcode1010@gmail.com</a>
+</p>
+
+</div>
+
+            <div id="pages_rand" class="page page-in">
+    <h1>
+        Rand()
+    </h1>
+
+    <hr />
+
+    <p>
+    &nbsp;&nbsp;&nbsp;&nbsp;Welcome, you've made it to the first easter egg. This is where I will 
+    post all of the random interesting things I've found, made, seen, or read. Feel free to browse 
+    around, and again, welcome to the random corners of my mind.
+
+    <br />
+    <br />
+
+    <canvas id="mind" class="center" width="500px" height="400px"></canvas>
+</p>
+
+</div>
+
+            <div id="pages_rand_salsa" class="page page-in">
+    <h1>
+        Habanero Serrano Salsa
+    </h1>
+
+    <hr />
+
+    <p>
+    <div class="title">
+        <h2>
+            Serrano-Habanero Salsa
+        </h2>
+    </div>
+
+    &nbsp;&nbsp;&nbsp;&nbsp;This is a spicy salsa recipe I made up for my self If you like hot things 
+    this might be for you. The salsa is good on burritos, eggs, rice and beans, or just a bag of chips.
+
+    <br />
+    <br />
+
+    <table class="center">
+        <tr>
+            <th>
+                Qty
+            </th>
+            <th>
+                Item
+            </th>
+            <th>
+                Notes
+            </th>
+        </tr>
+        <tr>
+            <th>
+                2
+            </th>
+            <th>
+                packages Tasti-Lee Tomatoes
+            </th>
+            <th>
+                These come in 1 lb packages so there are 3 to 5 tomatoes per
+            </th>
+        </tr>
+        <tr>
+            <th>
+                6
+            </th>
+            <th>
+                Cloves of garlic
+            </th>
+            <th>
+            </th>
+        </tr>
+        <tr>
+            <th>
+                1/2
+            </th>
+            <th>
+                White onion
+            </th>
+            <th>
+            </th>
+        </tr>
+        <tr>
+            <th>
+                4
+            </th>
+            <th>
+                Serrano peppers
+            </th>
+            <th>
+            </th>
+        </tr>
+        <tr>
+            <th>
+                1
+            </th>
+            <th>
+                Habanero pepper
+            </th>
+            <th>
+                The darker the pepper the hotter it will be
+            </th>
+        </tr>
+        <tr>
+            <th>
+                4
+            </th>
+            <th>
+                Fresno peppers
+            </th>
+            <th>
+            </th>
+        </tr>
+        <tr>
+            <th>
+                1/2
+            </th>
+            <th>
+                Long hot pepper
+            </th>
+            <th>
+            </th>
+        </tr>
+        <tr>
+            <th>
+                1/2 tube
+            </th>
+            <th>
+                Chili Pepper Stir-In Paste
+            </th>
+            <th>
+            </th>
+        </tr>
+        <tr>
+            <th>
+                1/2 tube
+            </th>
+            <th>
+                Cilantro Stir-In Paste
+            </th>
+            <th>
+                You can also use dry cilantro but don't use the fresh leaves they are too strong.
+            </th>
+        </tr>
+        <tr>
+            <th>
+                To taste
+            </th>
+            <th>
+                Salt
+            </th>
+            <th>
+            </th>
+        </tr>
+        <tr>
+            <th>
+                1
+            </th>
+            <th>
+                Lime
+            </th>
+            <th>
+            </th>
+        </tr>
+        <tr>
+            <th>
+                1
+            </th>
+            <th>
+                Lemon
+            </th>
+            <th>
+            </th>
+        </tr>
+    </table>
+
+    <br />
+
+    <b>
+        &nbsp;&nbsp;&nbsp;&nbsp;First chop the Fresno, Serrano, Long Hot, and Habenero peppers. Chop 
+        the Habanero extra fine (if you want less heat only use half of it). Try to only touch the 
+        peppers by the skin when cutting them and rinse your hands between each one. If you don't your 
+        knuckles will burn for the next 48 hours (also doing the peppers first helps). If you want to 
+        use the blender that works too, but it will be a different texture, just add the lemon and 
+        lime juice to help blend them. I strongly recomend using the blender for at least the
+        Habanero. If your hands do burn aloe lotion helps just put it on and let it dry in front of a 
+        fan. You may have 
+        to do this several times.
+    </b>
+
+    <br />
+    <br />
+
+    <div class="image center">
+        <div class="title">
+            <h3>
+                Fresno Peppers
+            </h3>
+        </div>
+
+        <hr />
+
+        <div class="group">
+            <img src="salsa/Fresno.jpg" />
+            <img src="salsa/FresnoChopped.jpg" />
+        </div>
+    </div>
+
+    <br />
+
+    <div class="image center">
+        <div class="title">
+            <h3>
+                Serrano Peppers
+            </h3>
+        </div>
+
+        <hr />
+
+        <div class="group">
+            <img src="salsa/Serrano.jpg" />
+            <img src="salsa/SerranoChopped.jpg" />
+        </div>
+    </div>
+
+    <br />
+
+    <div class="image center">
+        <div class="title">
+            <h3>
+                Long Hot Pepper
+            </h3>
+        </div>
+
+        <hr />
+
+        <div class="group">
+            <img src="salsa/Long.jpg" />
+            <img src="salsa/LongChopped.jpg" />
+        </div>
+    </div>
+
+    <br />
+
+    <div class="image center">
+        <div class="title">
+            <h3>
+                Habanero Pepper
+            </h3>
+        </div>
+
+        <hr />
+
+        <div class="group">
+            <img src="salsa/Habanero.jpg" />
+            <img src="salsa/HabaneroChopped.jpg" />
+        </div>
+    </div>
+
+    <br />
+
+    <b>
+        &nbsp;&nbsp;&nbsp;&nbsp;Next chop the onion into small sqare pieces.
+    </b>
+
+    <br />
+    <br />
+
+    <div class="image center">
+        <div class="title">
+            <h3>
+                Onion
+            </h3>
+        </div>
+
+        <hr />
+
+        <div class="group">
+            <img src="salsa/Onion.jpg" />
+            <img src="salsa/OnionChopped.jpg" />
+        </div>
+    </div>
+
+    <br />
+
+    <b>
+        &nbsp;&nbsp;&nbsp;&nbsp;Chop the garlic into very small pieces.
+    </b>
+
+    <br />
+    <br />
+
+    <div class="image center">
+        <div class="title">
+            <h3>
+                Garlic
+            </h3>
+        </div>
+
+        <hr />
+
+        <div class="group">
+            <img src="salsa/Garlic.jpg" />
+            <img src="salsa/GarlicChopped.jpg" />
+        </div>
+    </div>
+
+    <br />
+
+    <b>
+        &nbsp;&nbsp;&nbsp;&nbsp;Then add the Chili and Cilantro pasts to the mix.
+    </b>
+
+    <br />
+    <br />
+
+    <div class="image center">
+        <div class="title">
+            <h3>
+                Chili Paste
+            </h3>
+        </div>
+
+        <hr />
+
+        <div class="group">
+            <img src="salsa/Chili.jpg" />
+            <img src="salsa/ChiliSqueezed.jpg" />
+        </div>
+    </div>
+
+    <br />
+
+    <div class="image center">
+        <div class="title">
+            <h3>
+                Cilantro Paste
+            </h3>
+        </div>
+
+        <hr />
+
+        <div class="group">
+            <img src="salsa/Cilantro.jpg" />
+            <img src="salsa/CilantroSqueezed.jpg" />
+        </div>
+    </div>
+
+    <br />
+
+    <b>
+        &nbsp;&nbsp;&nbsp;&nbsp;Dice the tomatoes.
+    </b>
+
+    <br />
+    <br />
+
+    <div class="image center">
+        <div class="title">
+            <h3>
+                Tomatoes
+            </h3>
+        </div>
+
+        <hr />
+
+        <div class="group">
+            <img src="salsa/Tomatoes.jpg" />
+            <img src="salsa/TomatoesChopped.jpg" />
+        </div>
+    </div>
+
+    <br />
+
+    <b>
+        &nbsp;&nbsp;&nbsp;&nbsp;Juice the lemon and lime into the mix (if you use your knuckles to 
+        juice them it will help keep your hands from burning later.
+    </b>
+
+    <br />
+    <br />
+
+    <div class="image center">
+        <div class="title">
+            <h3>
+                Lemon
+            </h3>
+        </div>
+
+        <hr />
+
+        <div class="group">
+            <img src="salsa/Lemon.jpg" />
+            <img src="salsa/LemonSqueezed.jpg" />
+        </div>
+    </div>
+
+    <br />
+
+    <div class="image center">
+        <div class="title">
+            <h3>
+                Lime
+            </h3>
+        </div>
+
+        <hr />
+
+        <div class="group">
+            <img src="salsa/Lime.jpg" />
+            <img src="salsa/LimeSqueezed.jpg" />
+        </div>
+    </div>
+
+    <br />
+
+    <b>
+        &nbsp;&nbsp;&nbsp;&nbsp;Add salt and mix everything together. Once it is all mixed leave it in 
+        the fridge for 24 hours to allow the flavors to meld.
+    </b>
+
+    <br />
+    <br />
+    
+    <div class="image center">
+        <div class="title">
+            <h3>
+                Habanero Pepper
+            </h3>
+        </div>
+
+        <hr />
+
+        <img src="salsa/Salsa.jpg" />
+    </div>
 </p>
 
 </div>
