Extraction of smash.py

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="topic sub-topic">
     <div class="text" onclick="showPage('pages_projects_sac'); showMenu('menus_projects_sac', 1)">
         <h3>
-            Southern Arm Control
+            Southern&nbsp;Arm<br/>Control
         </h3>
     </div>
 </div>
@@ -60,7 +60,7 @@
                         <div class="topic sub-sub-topic">
     <div class="text" onclick="showPage('pages_projects_sac_ik'); showMenu(null, 2)">
         <h4>
-            Inverse Kinematics
+            Inverse&nbsp;Kinematics
         </h4>
     </div>
 </div>
@@ -68,7 +68,7 @@
                         <div class="topic sub-sub-topic">
     <div class="text" onclick="showPage('pages_projects_sac_install'); showMenu('menus_projects_sac_install', 2)">
         <h4>
-            Installation and Upgrading
+            Installation&nbsp;and<br/>Upgrading
         </h4>
     </div>
 </div>
@@ -136,7 +136,7 @@
                         <div class="topic sub-sub-topic">
     <div class="text" onclick="showPage('pages_projects_sac_issues'); showMenu(null, 2)">
         <h4>
-            Known Issues
+            Known&nbsp;Issues
         </h4>
     </div>
 </div>
@@ -184,7 +184,7 @@
                         <div class="topic sub-topic">
     <div class="text" onclick="showPage('pages_rand_salsa'); showMenu(null, 1)">
         <h3>
-            Habanero-Serrano Salsa
+            Habanero-Serrano&nbsp;Salsa
         </h3>
     </div>
 </div>
@@ -231,7 +231,7 @@
 
             <div id="pages_projects_sac" class="page page-in">
     <h1>
-        Southern Arm Control
+        Southern&nbsp;Arm&nbsp;Control
     </h1>
 
     <hr />
@@ -385,7 +385,7 @@
 
             <div id="pages_projects_sac_ik" class="page page-in">
     <h1>
-        Inverse Kinematics
+        Inverse&nbsp;Kinematics
     </h1>
 
     <hr />
@@ -1016,7 +1016,7 @@
 
             <div id="pages_projects_sac_design" class="page page-in">
     <h1>
-        Design Guidlines
+        Design&nbsp;Guidlines
     </h1>
 
     <hr />
@@ -1099,7 +1099,7 @@
 
             <div id="pages_projects_sac_issues" class="page page-in">
     <h1>
-        Known Issues
+        Known&nbsp;Issues
     </h1>
 
     <hr />
@@ -1513,7 +1513,7 @@ be fixed in the next version).
 
             <div id="pages_rand_salsa" class="page page-in">
     <h1>
-        Habanero Serrano Salsa
+        Habanero&nbsp;Serrano&nbsp;Salsa
     </h1>
 
     <hr />
