The user can now go to a specific page through the address bar.

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
                     <div id="menus_projects_htmlsmash" class="menu-group page-in">
                         <div class="topic sub-sub-topic">
-    <div class="text" onclick="showPage('pages_projects_htmlsmash_installandrun'); showMenu(None, 2)">
+    <div class="text" onclick="showPage('pages_projects_htmlsmash_installandrun'); showMenu(null, 2)">
         <h4>
             Install&nbsp;&amp;&nbsp;Run
         </h4>
@@ -178,7 +178,7 @@
 </div>
 
                         <div class="topic sub-sub-topic">
-    <div class="text" onclick="showPage('pages_projects_htmlsmash_setup'); showMenu(None, 2)">
+    <div class="text" onclick="showPage('pages_projects_htmlsmash_setup'); showMenu(null, 2)">
         <h4>
             SmashSetup
         </h4>
@@ -186,7 +186,7 @@
 </div>
 
                         <div class="topic sub-sub-topic">
-    <div class="text" onclick="showPage('pages_projects_htmlsmash_contributing'); showMenu(None, 2)">
+    <div class="text" onclick="showPage('pages_projects_htmlsmash_contributing'); showMenu(null, 2)">
         <h4>
             Contributing
         </h4>
@@ -510,7 +510,7 @@
         <img class="img" src="sac/imgs/eqn-01.png" />
     </div>
 
-    and
+    &nbsp;&nbsp;&nbsp;&nbsp;and
 
     <div class="equation">
         <img class="img" src="sac/imgs/eqn-02.png" />
@@ -566,7 +566,7 @@
         <img class="imgDoubleHalf" src="sac/imgs/eqn-08.png" />
     </div>
 
-    and
+    &nbsp;&nbsp;&nbsp;&nbsp;and
 
     <div class="equation">
         <img class="imgDoubleHalf" src="sac/imgs/eqn-09.png" />
