Change to the copyright date

--- a/index.html
+++ b/index.html
@@ -2065,8 +2065,9 @@ be fixed in the next version).
 
         </div>
 
+	<!--{{banners/footer}}-->
         <div class="footer">
-            <h4>&copy; Craig Christensen 2017 - 2018</h4>
+            <h4>&copy; Craig Christensen 2017 - 2019</h4>
         </div>
 
         <!--script src="craigCode.js"></script-->
